# protobuf-always-monoid-repro

./: protobuf-always-monoid-repro.cabal
src/: Main.hs
