name:          protobuf-always-monoid-repro
version:       0.1.0.0
license:       Apache-2.0
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    jacob@stanley.io
category:      Data
build-type:    Simple
cabal-version: >= 1.10

executable protobuf-always-monoid-repro
  default-language: Haskell2010

  main-is: Main.hs
  hs-source-dirs: src

  build-depends:
      base       == 4.7.*
    , bytestring == 0.10.*
    , cereal     == 0.4.*
    , protobuf   == 0.2.*
    , text       == 1.1.*
